# slurm-meson

./: README.md  building_comments.txt  config.h.in  meson.build  meson_howto.md  meson_howto.txt  meson_notes.md  meson_options.txt  meson_presentation.txt
contribs/: meson.build
contribs/sgi/: meson.build
doc/: meson.build
doc/html/: meson.build  shtml2html.py
slurm/: meson.build  slurm.h.in  slurm.h.in.meson
src/: meson.build
src/api/: meson.build  meson.libslurm.map
src/bcast/: meson.build
src/common/: generate_global_defaults_c.sh  meson.build
src/database/: meson.build
src/db_api/: meson.build
src/layouts/: meson.build
src/layouts/power/: meson.build
src/layouts/unit/: meson.build
src/plugins/: meson.build
src/plugins/accounting_storage/: meson.build
src/plugins/accounting_storage/common/: meson.build
src/plugins/accounting_storage/filetxt/: meson.build
src/plugins/accounting_storage/mysql/: meson.build
src/plugins/accounting_storage/none/: meson.build
src/plugins/accounting_storage/slurmdbd/: meson.build
src/plugins/acct_gather_energy/: meson.build
src/plugins/acct_gather_energy/cray/: meson.build
src/plugins/acct_gather_energy/ibmaem/: meson.build
src/plugins/acct_gather_energy/ipmi/: meson.build
src/plugins/acct_gather_energy/none/: meson.build
src/plugins/acct_gather_energy/rapl/: meson.build
src/plugins/acct_gather_energy/xcc/: meson.build
src/plugins/acct_gather_filesystem/: meson.build
src/plugins/acct_gather_filesystem/lustre/: meson.build
src/plugins/acct_gather_filesystem/none/: meson.build
src/plugins/acct_gather_interconnect/: meson.build
src/plugins/acct_gather_interconnect/none/: meson.build
src/plugins/acct_gather_interconnect/ofed/: meson.build
src/plugins/acct_gather_profile/: meson.build
src/plugins/acct_gather_profile/hdf5/: meson.build
src/plugins/acct_gather_profile/influxdb/: meson.build
src/plugins/acct_gather_profile/none/: meson.build
src/plugins/auth/: meson.build
src/plugins/auth/munge/: meson.build
src/plugins/auth/none/: meson.build
src/plugins/burst_buffer/: meson.build
src/plugins/burst_buffer/common/: meson.build
src/plugins/burst_buffer/cray/: meson.build
src/plugins/burst_buffer/generic/: meson.build
src/plugins/checkpoint/: meson.build
src/plugins/checkpoint/blcr/: meson.build
src/plugins/checkpoint/none/: meson.build
src/plugins/checkpoint/ompi/: meson.build
src/plugins/core_spec/: meson.build
src/plugins/core_spec/cray/: meson.build
src/plugins/core_spec/none/: meson.build
src/plugins/cred/: meson.build
src/plugins/cred/munge/: meson.build
src/plugins/cred/none/: meson.build
src/plugins/crypto/: meson.build
src/plugins/crypto/munge/: meson.build
src/plugins/ext_sensors/: meson.build
src/plugins/ext_sensors/none/: meson.build
src/plugins/ext_sensors/rrd/: meson.build
src/plugins/gres/: meson.build
src/plugins/gres/common/: meson.build
src/plugins/gres/gpu/: meson.build
src/plugins/gres/mic/: meson.build
src/plugins/gres/mps/: meson.build
src/plugins/gres/nic/: meson.build
src/plugins/job_container/: meson.build
src/plugins/job_container/cncu/: meson.build
src/plugins/job_container/none/: meson.build
src/plugins/job_submit/: meson.build
src/plugins/job_submit/all_partitions/: meson.build
src/plugins/job_submit/cray/: meson.build
src/plugins/job_submit/defaults/: meson.build
src/plugins/job_submit/logging/: meson.build
src/plugins/job_submit/lua/: meson.build
src/plugins/job_submit/partition/: meson.build
src/plugins/job_submit/pbs/: meson.build
src/plugins/job_submit/require_timelimit/: meson.build
src/plugins/job_submit/throttle/: meson.build
src/plugins/jobacct_gather/: meson.build
src/plugins/jobacct_gather/cgroup/: meson.build
src/plugins/jobacct_gather/common/: meson.build
src/plugins/jobacct_gather/linux/: meson.build
src/plugins/jobacct_gather/none/: meson.build
src/plugins/jobcomp/: meson.build
src/plugins/jobcomp/elasticsearch/: meson.build
src/plugins/jobcomp/filetxt/: meson.build
src/plugins/jobcomp/mysql/: meson.build
src/plugins/jobcomp/none/: meson.build
src/plugins/jobcomp/script/: meson.build
src/plugins/launch/: meson.build
src/plugins/launch/poe/: meson.build
src/plugins/launch/slurm/: meson.build
src/plugins/mcs/: meson.build
src/plugins/mcs/account/: meson.build
src/plugins/mcs/group/: meson.build
src/plugins/mcs/none/: meson.build
src/plugins/mcs/user/: meson.build
src/plugins/mpi/: meson.build
src/plugins/mpi/none/: meson.build
src/plugins/mpi/openmpi/: meson.build
src/plugins/mpi/pmi2/: meson.build
src/plugins/mpi/pmix/: meson.build
src/plugins/node_features/: meson.build
src/plugins/node_features/knl_cray/: meson.build
src/plugins/node_features/knl_generic/: meson.build
src/plugins/power/: meson.build
src/plugins/power/common/: meson.build
src/plugins/preempt/: meson.build
src/plugins/priority/: meson.build
src/plugins/proctrack/: meson.build
src/plugins/route/: meson.build
src/plugins/sched/: meson.build
src/plugins/select/: meson.build
src/plugins/slurmctld/: meson.build
src/plugins/switch/: meson.build
src/plugins/task/: meson.build
src/plugins/topology/: meson.build
src/sacct/: meson.build  print.c
src/sacctmgr/: meson.build
src/salloc/: meson.build
src/sattach/: meson.build
src/sbatch/: meson.build
src/sbcast/: meson.build
src/scancel/: meson.build
src/scontrol/: meson.build  reboot_node.c  update_node.c  update_part.c
src/sdiag/: meson.build  sdiag.c
src/sinfo/: meson.build
src/slurmctld/: meson.build
src/slurmd/: meson.build
src/slurmd/common/: meson.build
src/slurmd/slurmd/: meson.build
src/slurmd/slurmstepd/: meson.build
src/slurmdbd/: meson.build
src/smap/: meson.build
src/sprio/: meson.build
src/squeue/: meson.build
src/sreport/: meson.build
src/srun/: meson.build
src/srun/libsrun/: meson.build
src/srun_cr/: meson.build
src/sshare/: meson.build
src/sstat/: meson.build  print.c
src/strigger/: meson.build
src/sview/: meson.build
(+59 files in other folders)
