# Remove all 'enable-' and 'with-' prefixes, since meson does explicit =true
# https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting

option('multiple-slurmd', type: 'boolean', value: false, description: 'enable multiple-slurmd support')
option('static-libslurm', type: 'boolean', value: false, description: 'statically link to libslurm.o instead of the shared libslurm lib; can dramatically increase the footprint of Slurm.')

# Example (from the slurm source directory):
# meson ../meson_build/build -Dmultiple-slurmd=true --werror --prefix=$HOME/slurm/slurm_fork/meson_build

# References
########################3
# https://mesonbuild.com/Build-options.html