# Remove all 'enable-' and 'with-' prefixes, since meson does explicit =true
# https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting

option('multiple_slurmd', type: 'boolean', value: false, description: 'enable multiple_slurmd support')
option('static_libslurm', type: 'boolean', value: false, description: 'statically link to libslurm.o instead of the shared libslurm lib; can dramatically increase the footprint of Slurm')
option('mysql_config', type: 'string', description: 'Specify path of directory where mysql_config binary exists')
option('rpath_absolute', type: 'boolean', value: false, description: 'If set to true, makes the rpath of executables absolute. This makes it so the executables can move anywhere without needing to move any lib dirs in relation to it. Absolute rpath will be prefix + libdir + `slurm`. By default, rpath is relative, and is set to `$ORIGIN/../` + libdir + `slurm`, where `$ORIGIN` is the location of the executable')
# TODO: rpath option?
# option('rpath', type: 'boolean', value: true, description: 'If set to false, disables setting the rpath for executables. Only takes effect if static_libslurm is unspecified')
# option('blcr', type: 'string', description: 'Specify path to BLCR installation')

# Example (from the slurm source directory):
# meson ../meson_build/build -Dmultiple_slurmd=true --werror --prefix=$HOME/slurm/slurm_fork/meson_build

# References
########################3
# https://mesonbuild.com/Build-options.html